--- a/.gitignore
+++ b/.gitignore
@@ -385,3 +385,4 @@ apps/iOS/MNNLLMChat/swift-transformers/
 apps/iOS/MNNLLMChat/MNNLLMiOS/LocalModel/Qwen2.5-Omni-3B-MNN
 apps/mnncli/.cursorrules
 apps/Android/MnnLlmChat/app/src/main/assets/builtin_models
+modelscope
