--- a/transformers/llm/engine/CMakeLists.txt
+++ b/transformers/llm/engine/CMakeLists.txt
@@ -51,6 +51,9 @@ if (LLM_SUPPORT_AUDIO AND MNN_BUILD_AUDIO)
     add_definitions(-DLLM_SUPPORT_AUDIO)
 endif()
 
+# Disable exceptions in httplib since MNN is compiled with -fno-exceptions
+target_compile_definitions(llm PRIVATE CPPHTTPLIB_NO_EXCEPTIONS)
+
 IF(CMAKE_SYSTEM_NAME MATCHES "^Android" AND NOT MNN_BUILD_FOR_ANDROID_COMMAND)
 IF(NOT NATIVE_INCLUDE_OUTPUT)
   set(NATIVE_INCLUDE_OUTPUT ".")
