fix download errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -912,7 +912,12 @@ IF(MNN_BUILD_TOOLS)
 include(${CMAKE_CURRENT_LIST_DIR}/tools/cpp/CMakeLists.txt)
 ENDIF()
 IF(MNN_BUILD_TEST)
-include(${CMAKE_CURRENT_LIST_DIR}/test/CMakeLists.txt)
+# Use new test structure if it exists, otherwise fall back to old structure
+if(EXISTS ${CMAKE_CURRENT_LIST_DIR}/tests/build/CMakeLists.txt)
+  include(${CMAKE_CURRENT_LIST_DIR}/tests/build/CMakeLists.txt)
+else()
+  include(${CMAKE_CURRENT_LIST_DIR}/test/CMakeLists.txt)
+endif()
 ENDIF()
 IF(MNN_BUILD_BENCHMARK)
 include(${CMAKE_CURRENT_LIST_DIR}/benchmark/CMakeLists.txt)
