seprate mnncli build in apps/mnncli

--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,6 @@ source/backend/qnn/3rdParty/include
 project/android/.cxx
 pymnn/android/.cxx/
 apps/mnncli/.cursorrules
+apps/mnncli/model_market_json_data.inc
+#kledi
+_deps
