--- a/apps/Android/MnnLlmChat/downloadSherpaMnn.gradle
+++ b/apps/Android/MnnLlmChat/downloadSherpaMnn.gradle
@@ -18,6 +18,9 @@ task downloadAndUnzipNativeLibs {
         // Create output directory if it doesn't exist
         outputDir.mkdirs()
         
+        // Ensure build directory exists before downloading
+        downloadedZip.parentFile.mkdirs()
+
         ant.get(src: nativeLibsUrl, dest: downloadedZip)
 
         if (!downloadedZip.exists()) {
