--- a/apps/mnncli/CMakeLists.txt
+++ b/apps/mnncli/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_OSX_DEPLOYMENT_TARGET "13.0" CACHE STRING "Minimum macOS version" FORC
 
 option(BUILD_MNNCLI_TEST "Build MNNCLI test programs." OFF)
 
-# Configure OpenSSL static libraries BEFORE fetching httplib
+# Configure OpenSSL static libraries
 if(APPLE)
     set(OPENSSL_ROOT_DIR "/opt/homebrew/opt/openssl@3")
     set(OPENSSL_USE_STATIC_LIBS TRUE)
@@ -24,20 +24,8 @@ if(APPLE)
     message(STATUS "  Crypto: ${OPENSSL_CRYPTO_LIBRARY}")
 endif()
 
-# Fetch cpp-httplib (header-only library)
-include(FetchContent)
-
-# Disable optional httplib dependencies to avoid extra dynamic libraries
-set(HTTPLIB_USE_BROTLI_IF_AVAILABLE OFF CACHE BOOL "Disable Brotli support")
-set(HTTPLIB_USE_ZLIB_IF_AVAILABLE ON CACHE BOOL "Enable zlib support (system library)")
-set(HTTPLIB_REQUIRE_OPENSSL OFF CACHE BOOL "Don't require OpenSSL in httplib")
-
-FetchContent_Declare(
-    httplib
-    GIT_REPOSITORY https://github.com/yhirose/cpp-httplib.git
-    GIT_TAG v0.18.2
-)
-FetchContent_MakeAvailable(httplib)
+# Use httplib from MNN transformers directory instead of fetching it
+# This ensures we use the same version (0.26.0) as the MNN library to avoid TLS mismatch
 
 # Set MNN paths (can be overridden via command line)
 set(MNN_BUILD_DIR "${CMAKE_CURRENT_LIST_DIR}/../../build_mnn_static" CACHE PATH "MNN build directory")
@@ -73,7 +61,7 @@ function(embed_file_as_c_array input_file output_file symbol_name)
 endfunction()
 
 # Generate embedded model_market.json data
-set(MODEL_MARKET_JSON_FILE "${CMAKE_CURRENT_LIST_DIR}/MnnLlmChat/app/src/main/assets/model_market.json")
+set(MODEL_MARKET_JSON_FILE "/home/ruoyi/MNN/apps/Android/MnnLlmChat/app/src/main/assets/model_market.json")
 set(MODEL_MARKET_JSON_INC_FILE "${CMAKE_CURRENT_BINARY_DIR}/model_market_json_data.inc")
 
 if(EXISTS ${MODEL_MARKET_JSON_FILE})
@@ -265,6 +253,7 @@ endif()
 # Include directories
 target_include_directories(mnncli PRIVATE
     ${MNN_SOURCE_DIR}/include/
+    ${MNN_SOURCE_DIR}/transformers/llm/engine/src/
     ${MNN_SOURCE_DIR}/transformers/llm/engine/include/
     ${MNN_SOURCE_DIR}/3rd_party/
     ${CMAKE_CURRENT_LIST_DIR}/include/
@@ -290,9 +279,8 @@ endif()
 # Link to pre-built MNN static library
 target_link_libraries(mnncli PRIVATE ${MNN_LIBRARY})
 
-# Link httplib and disable Brotli support
+# Disable Brotli support in httplib
 target_compile_definitions(mnncli PRIVATE CPPHTTPLIB_NO_BROTLI)
-target_link_libraries(mnncli PRIVATE httplib::httplib)
 
 # Link system libraries on macOS
 if(APPLE)
