--- a/source/backend/cpu/arm/CMakeLists.txt
+++ b/source/backend/cpu/arm/CMakeLists.txt
@@ -36,6 +36,9 @@ elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^aarch64" OR ARCHS STREQUAL "arm64" OR AR
     if (MNN_KLEIDIAI)
        include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/KleidiAI.cmake)
        download_kleidiai_and_collect_sources()
+       if(MNN_KLEIDIAI_DEFAULT_ON)
+           add_definitions(-DMNN_DEFAULT_USE_KLEIDIAI)
+        endif()
     endif()
 
     if (MNN_SME2)
