Add T5 support for Stable Diffusion 3.5
Signed-off-by: zlaazlaa <2889827787@qq.com>

--- a/transformers/diffusion/engine/CMakeLists.txt
+++ b/transformers/diffusion/engine/CMakeLists.txt
@@ -1,5 +1,29 @@
 cmake_minimum_required(VERSION 3.10)
 
+# SentencePiece integration
+set(SPM_ENABLE_SHARED OFF CACHE BOOL "" FORCE)
+set(SPM_BUILD_TEST OFF CACHE BOOL "" FORCE)
+set(SPM_ENABLE_TCMALLOC OFF CACHE BOOL "" FORCE)
+set(SPM_PROTOBUF_PROVIDER "internal" CACHE STRING "" FORCE)
+set(SPM_ABSL_PROVIDER "internal" CACHE STRING "" FORCE)
+
+# Force C++17 for sentencepiece compatibility
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Prevent sentencepiece from installing itself
+set(CMAKE_INSTALL_BINDIR bin_spm)
+set(CMAKE_INSTALL_LIBDIR lib_spm)
+set(CMAKE_INSTALL_INCLUDEDIR include_spm)
+
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../../../3rd_party/sentencepiece sentencepiece_build EXCLUDE_FROM_ALL)
+
+include_directories(${CMAKE_CURRENT_LIST_DIR}/../../../3rd_party/sentencepiece/src)
+
+if (TARGET sentencepiece-static)
+    target_compile_options(sentencepiece-static PRIVATE -fexceptions)
+endif()
+
 # source files
 FILE(GLOB SRCS ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp)
 include_directories(${CMAKE_SOURCE_DIR}/tools/cv/include/)
@@ -11,17 +35,18 @@ if (MNN_SEP_BUILD)
         # compile dynamic so, support Linux/Mac
         add_library(diffusion SHARED ${SRCS})
         set_target_properties(diffusion PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
-        target_link_libraries(diffusion ${MNN_DEPS})
+        target_link_libraries(diffusion ${MNN_DEPS} sentencepiece-static)
     else()
         add_library(diffusion STATIC ${SRCS})
     endif()
     list(APPEND MNN_DEPS diffusion)
 else()
     add_library(diffusion OBJECT ${SRCS})
+    list(APPEND MNN_EXTRA_DEPENDS sentencepiece-static)
 endif()
 
 add_executable(diffusion_demo ${CMAKE_CURRENT_LIST_DIR}/diffusion_demo.cpp)
 target_link_libraries(diffusion_demo  ${MNN_DEPS})
 
 add_executable(diffusion_sd35_demo ${CMAKE_CURRENT_LIST_DIR}/diffusion_sd35_demo.cpp)
-target_link_libraries(diffusion_sd35_demo  ${MNN_DEPS})
+target_link_libraries(diffusion_sd35_demo  ${MNN_DEPS} sentencepiece-static)
