refactor download module to a common framework

--- a/apps/Android/MnnTaoAvatar/app/build.gradle
+++ b/apps/Android/MnnTaoAvatar/app/build.gradle
@@ -99,4 +99,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    implementation project(':model_downloader')
 }
