--- a/apps/Android/MnnTaoAvatar/settings.gradle
+++ b/apps/Android/MnnTaoAvatar/settings.gradle
@@ -17,3 +17,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "TaoAvatar"
 include ':app'
+include ':model_downloader'
+project(':model_downloader').projectDir = new File('../../frameworks/model_downloader/android')
