1. Fixed download bugs 2. added MNN version number information 3. and added support for selecting OpenCL in performance testing.

--- a/apps/Android/MnnLlmChat/app/src/main/cpp/CMakeLists.txt
+++ b/apps/Android/MnnLlmChat/app/src/main/cpp/CMakeLists.txt
@@ -14,6 +14,7 @@ project("mnnllmapp")
 add_library(${CMAKE_PROJECT_NAME} SHARED
         # List C/C++ source files with relative paths to this CMakeLists.txt.
         llm_mnn_jni.cpp
+        mnn_wrapper_jni.cpp
         diffusion_jni.cpp
         diffusion_session.cpp
         llm_session.cpp
