--- a/apps/Android/MnnLlmChat/app/build.gradle
+++ b/apps/Android/MnnLlmChat/app/build.gradle
@@ -224,4 +224,6 @@ dependencies {
     testImplementation 'org.mockito.kotlin:mockito-kotlin:5.2.0'
     testImplementation "io.mockk:mockk:1.13.10"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.10.2"
+    debugImplementation 'com.facebook.stetho:stetho:1.6.0'
+    debugImplementation 'com.facebook.stetho:stetho-okhttp3:1.6.0'
 }
