--- a/apps/frameworks/mnn_tts/demo/android/build.gradle
+++ b/apps/frameworks/mnn_tts/demo/android/build.gradle
@@ -3,6 +3,40 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.9.22'
 }
 
+task downloadAndUnzipNativeLibs {
+    group = 'Pre-build'
+    description = 'Downloads and unzips native libraries from CDN.'
+    def nativeLibsUrl = 'https://meta.alicdn.com/data/mnn/avatar/native-libs-arm64-v8a.zip'
+    def zipFileName = 'avatar-native-libs-arm64-v8a.zip'
+    def outputDir = project.rootDir
+    def downloadedZip = new File(project.buildDir, zipFileName)
+    def checkFile = new File(outputDir, 'src/main/jniLibs/arm64-v8a/libsherpa-mnn-jni.so')
+    inputs.property('url', nativeLibsUrl)
+    outputs.file(checkFile)
+    doLast {
+        println "-> Executing downloadAndUnzipNativeLibs task..."
+        println "   Downloading from ${nativeLibsUrl}"
+        ant.get(src: nativeLibsUrl, dest: downloadedZip)
+
+        if (!downloadedZip.exists()) {
+            throw new GradleException("Download failed: ${downloadedZip} not found.")
+        }
+        println "   Download complete."
+        println "   Unzipping ${downloadedZip.name} to project root..."
+        copy {
+            from(zipTree(downloadedZip))
+            into(outputDir)
+        }
+        println "   Unzip complete."
+        downloadedZip.delete()
+    }
+    onlyIf {
+        println "-> Checking if native libs exist... [Exists: ${checkFile.exists()}]"
+        return !checkFile.exists()
+    }
+}
+preBuild.dependsOn downloadAndUnzipNativeLibs
+
 android {
     namespace 'com.alibaba.mnn.tts.demo'
     compileSdk 35
