--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -940,6 +940,11 @@ if (NOT MNN_BUILD_SHARED_LIBS)
 endif()
 list(APPEND MNN_TARGETS MNN)
 list(REMOVE_ITEM MNN_TARGETS MNN)
+
+# Cache MNN_DEPS and MNN_INCLUDES for external projects
+set(MNN_LIBS ${MNN_DEPS} CACHE INTERNAL "MNN targets")
+set(MNN_INCLUDE_DIRS ${MNN_INCLUDES} CACHE INTERNAL "MNN include directories")
+
 IF(MNN_BUILD_DEMO)
 include(${CMAKE_CURRENT_LIST_DIR}/demo/exec/CMakeLists.txt)
 ENDIF()
