feat: integrate Sana diffusion model into MNN Android app
- Implement Sana diffusion JNI bindings and session management
- Add Android UI components for Sana image generation
  - Diffusion settings bottom sheet
  - Image menu options
  - Main settings fragment
- Update chat components to support Sana model
- Add image utilities and fullscreen viewer
- Improve model downloader with HfTreeItem support
- Add debug/release build variants for Android
- Reorganize sana scripts to apps/sana/

--- a/apps/Android/MnnLlmChat/app/src/main/cpp/CMakeLists.txt
+++ b/apps/Android/MnnLlmChat/app/src/main/cpp/CMakeLists.txt
@@ -20,6 +20,8 @@ add_library(${CMAKE_PROJECT_NAME} SHARED
         llm_session.cpp
         crash_util.cpp
         processor.cpp
+        sana_jni.cpp
+        sana_session.cpp
         # Video processing files (moved to video/ directory)
         video/video_decoder.cpp
         video/byte_buffer_decoder.cpp
